added a section in body

--- a/index.html
+++ b/index.html
@@ -63,5 +63,20 @@
           </div>
         </nav>
     </div>
+    <div class="section">
+        <div class="hero-main">
+            <h1>শীর্ষ সংবাদ</h1>
+            <img src="img/image-1.jpg">
+            <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
+            <h3>🕑 ১ ঘণ্টা আগে</h3>
+            <div class="hero-child">
+                <img src="img/image-1.jpg">
+                <div class="hero-child-text">
+                    <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                    <h4>🕑 ১ ঘণ্টা আগে</h4>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
