completed first section

--- a/index.html
+++ b/index.html
@@ -1,82 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="style.css">
-<title>Corporate Sangbad</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Corporate Sangbad</title>
+  </head>
+  <body>
     <div class="topbar">
-        <div class="date-time">
-            সোমবার, ৮ই এপ্রিল, ২০২৪ খ্রিস্টাব্দ ❙ ২৫শে চৈত্র, ১৪৩০ বঙ্গাব্দ
-        </div>
-        <div class="date-time">
-        <div class="misc">
-            ✔ বাংলা টেক্সট কনভার্টার
-        </div>
-        </div>
+      <div class="date-time">
+        সোমবার, ৮ই এপ্রিল, ২০২৪ খ্রিস্টাব্দ ❙ ২৫শে চৈত্র, ১৪৩০ বঙ্গাব্দ
+      </div>
+      <div class="date-time">
+        <div class="misc">✔ বাংলা টেক্সট কনভার্টার</div>
+      </div>
     </div>
     <div class="header">
-        <div class="header_logo">
-            <img src="img/logo.png">
-        </div>
-        <div class="header_ad">
-            <img src="img/ad700X50.jpg">
-        </div>
+      <div class="header_logo">
+        <img src="img/logo.png" />
+      </div>
+      <div class="header_ad">
+        <img src="img/ad700X50.jpg" />
+      </div>
     </div>
     <div class="Navbar">
-        <nav class="Navbar_Items">
-          <div class="Navbar_Link">
-            প্রচ্ছদ
-          </div>
-          <div class="Navbar_Link">
-            কর্পোরেট
-          </div>
-          <div class="Navbar_Link">
-            জাতীয়
-          </div>
-          <div class="Navbar_Link">
-            আন্তর্জাতিক
-          </div>
-          <div class="Navbar_Link">
-            অর্থ-বাণিজ্য
-          </div>
-          <div class="Navbar_Link">
-            শেয়ার বাজার
-          </div>
-          <div class="Navbar_Link">
-            প্রাইস সেন্সিটিভ
-          </div>
-          <div class="Navbar_Link">
-            খেলাধূলা
-          </div>
-          <div class="Navbar_Link">
-            বিনোদন
-          </div>
-          <div class="Navbar_Link">
-            তথ্য-প্রযুক্তি
-          </div>
-          <div class="Navbar_Link">
-            অন্যান্য
-          </div>
-        </nav>
+      <nav class="Navbar_Items">
+        <div class="Navbar_Link">প্রচ্ছদ</div>
+        <div class="Navbar_Link">কর্পোরেট</div>
+        <div class="Navbar_Link">জাতীয়</div>
+        <div class="Navbar_Link">আন্তর্জাতিক</div>
+        <div class="Navbar_Link">অর্থ-বাণিজ্য</div>
+        <div class="Navbar_Link">শেয়ার বাজার</div>
+        <div class="Navbar_Link">প্রাইস সেন্সিটিভ</div>
+        <div class="Navbar_Link">খেলাধূলা</div>
+        <div class="Navbar_Link">বিনোদন</div>
+        <div class="Navbar_Link">তথ্য-প্রযুক্তি</div>
+        <div class="Navbar_Link">অন্যান্য</div>
+      </nav>
     </div>
     <div class="section">
+      <div class="hero">
         <div class="hero-main">
-            <h1>শীর্ষ সংবাদ</h1>
-            <img src="img/image-1.jpg">
-            <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
-            <h3>🕑 ১ ঘণ্টা আগে</h3>
-            <div class="hero-child">
-                <img src="img/image-1.jpg">
-                <div class="hero-child-text">
-                    <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
-                    <h4>🕑 ১ ঘণ্টা আগে</h4>
-                </div>
-            </div>
+          <h1>শীর্ষ সংবাদ</h1>
+          <img src="img/image-1.jpg" />
+          <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
+          <h3>🕑 ১ ঘণ্টা আগে</h3>
         </div>
+        <div class="hero-double-column">
+          <h1>শেয়ার বাজার</h1>
+          <div class="hero-double-column-section">
+            <div class="hero-double-column-item">
+              <div class="hero-column-child">
+                <img src="img/image-1.jpg" />
+                <div class="hero-column-child-text">
+                  <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                </div>
+              </div>
+              <div class="hero-column-child">
+                <img src="img/image-1.jpg" />
+                <div class="hero-column-child-text">
+                  <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                </div>
+              </div>
+              <div class="hero-column-child">
+                <img src="img/image-1.jpg" />
+                <div class="hero-column-child-text">
+                  <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                </div>
+              </div>
+            </div>
+            <div class="hero-double-column-item">
+              <div class="hero-column-child">
+                <img src="img/image-1.jpg" />
+                <div class="hero-column-child-text">
+                  <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                </div>
+              </div>
+              <div class="hero-column-child">
+                <img src="img/image-1.jpg" />
+                <div class="hero-column-child-text">
+                  <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                </div>
+              </div>
+              <div class="hero-column-child">
+                <img src="img/image-1.jpg" />
+                <div class="hero-column-child-text">
+                  <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="hero-column">
+        <h1>কর্পোরেট-অর্থ ও বাণিজ্য</h1>
+        <img src="img/image-1.jpg" />
+        <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
+      </div>
+      <div class="psi">
+        <h1>প্রাইস সেনসিটিভ ইনফরমেশন</h1>
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
+      </div>
     </div>
-</body>
+  </body>
 </html>
