fixed some alignment issues

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1>শীর্ষ সংবাদ</h1>
           <img src="img/image-1.jpg" />
           <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
-          <h3>🕑 ১ ঘণ্টা আগে</h3>
+          <p>নিজস্ব প্রতিবেদক: এবার বেসরকারি খাতের ভালো ব্যাংকের তালিকায় থাকা সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে সমস্যাগ্রস্ত বেসিক ব্যাংক। আজ সোমবার বাংলাদেশ ব্যাংকে অনুষ্ঠিত এক বৈঠকে এই সিদ্ধান্ত হয়।</p>
         </div>
         <div class="hero-double-column">
           <h1>শেয়ার বাজার</h1>
@@ -136,6 +136,8 @@
       </div>
       <div class="psi">
         <h1>প্রাইস সেনসিটিভ ইনফরমেশন</h1>
+        <img src="img/image-1.jpg" />
+        <img src="img/image-1.jpg" />
         <img src="img/image-1.jpg" />
         <img src="img/image-1.jpg" />
         <img src="img/image-1.jpg" />
