added text scroller

--- a/index.html
+++ b/index.html
@@ -39,53 +39,64 @@
         <div class="Navbar_Link">অন্যান্য</div>
       </nav>
     </div>
+    <div class="scroller" id="scroll-container">
+      <div class="scroller-title">শিরোনাম</div>
+        <div class="scroller-items" id="scroll-container">
+          <div id="scroll-text">সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক  •  সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক  •  সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক </div>
+        </div>
+    </div>
+
     <div class="section">
       <div class="hero">
         <div class="hero-main">
           <h1>শীর্ষ সংবাদ</h1>
           <img src="img/image-1.jpg" />
           <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
-          <p>নিজস্ব প্রতিবেদক: এবার বেসরকারি খাতের ভালো ব্যাংকের তালিকায় থাকা সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে সমস্যাগ্রস্ত বেসিক ব্যাংক। আজ সোমবার বাংলাদেশ ব্যাংকে অনুষ্ঠিত এক বৈঠকে এই সিদ্ধান্ত হয়।</p>
+          <p>
+            নিজস্ব প্রতিবেদক: এবার বেসরকারি খাতের ভালো ব্যাংকের তালিকায় থাকা
+            সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে সমস্যাগ্রস্ত বেসিক ব্যাংক। আজ
+            সোমবার বাংলাদেশ ব্যাংকে অনুষ্ঠিত এক বৈঠকে এই সিদ্ধান্ত হয়।
+          </p>
         </div>
         <div class="hero-double-column">
           <h1>শেয়ার বাজার</h1>
           <div class="hero-double-column-section">
             <div class="hero-double-column-item">
-              <div class="hero-column-child">
+              <div class="hero-box-child">
                 <img src="img/image-1.jpg" />
-                <div class="hero-column-child-text">
+                <div class="hero-box-child-text">
                   <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
                 </div>
               </div>
-              <div class="hero-column-child">
+              <div class="hero-box-child">
                 <img src="img/image-1.jpg" />
-                <div class="hero-column-child-text">
+                <div class="hero-box-child-text">
                   <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
                 </div>
               </div>
-              <div class="hero-column-child">
+              <div class="hero-box-child">
                 <img src="img/image-1.jpg" />
-                <div class="hero-column-child-text">
+                <div class="hero-box-child-text">
                   <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
                 </div>
               </div>
             </div>
             <div class="hero-double-column-item">
-              <div class="hero-column-child">
+              <div class="hero-box-child">
                 <img src="img/image-1.jpg" />
-                <div class="hero-column-child-text">
+                <div class="hero-box-child-text">
                   <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
                 </div>
               </div>
-              <div class="hero-column-child">
+              <div class="hero-box-child">
                 <img src="img/image-1.jpg" />
-                <div class="hero-column-child-text">
+                <div class="hero-box-child-text">
                   <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
                 </div>
               </div>
-              <div class="hero-column-child">
+              <div class="hero-box-child">
                 <img src="img/image-1.jpg" />
-                <div class="hero-column-child-text">
+                <div class="hero-box-child-text">
                   <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
                 </div>
               </div>
@@ -97,6 +108,12 @@
         <h1>কর্পোরেট-অর্থ ও বাণিজ্য</h1>
         <img src="img/image-1.jpg" />
         <h2>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h2>
+        <div class="hero-column-child">
+          <img src="img/image-1.jpg" />
+          <div class="hero-column-child-text">
+            <h3>সিটি ব্যাংকের সঙ্গে একীভূত হচ্ছে বেসিক ব্যাংক</h3>
+          </div>
+        </div>
         <div class="hero-column-child">
           <img src="img/image-1.jpg" />
           <div class="hero-column-child-text">
