--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </div>
     <div class="section red-section">
       <div class="red-section-container">
-        <h1 id="video-title"><img id="video-icon" src="img/play-fill-white.svg" /> ভিডিও গ্যালারি</h1>
+        <h1 id="video-row-title"><img id="video-icon" src="img/play-fill-white.svg" /> ভিডিও গ্যালারি</h1>
         <div class="national-row">
           <div class="national-row-item">
             <div class="video-container">
@@ -435,6 +435,34 @@
         </div>
       </div>
     </div>
-    <div class="section"></div>
+    <div class="footer">
+      <div class="footer-row">
+        <div class="footer-column">
+          <img src="img/logo.png">
+          <p>তথ‌্য অ‌ধিদপ্ত‌রের নিবন্ধন নম্বরঃ ৭৭</p>
+          <h2>সম্পাদকীয় কার্যালয়</h2>
+          <p>৫৫/বি, নোয়াখালী টাওয়ার, ১১ তলা,</p>
+          <p> সুইট ১১-এফ, পুরানা পল্টন, ঢাকা ১০০০</p>
+        </div>
+        <div class="footer-column">
+          <h2>বিজ্ঞাপন ও বার্তা বিভাগ</h2>
+          <p>ই-মেইলঃ corporatesangbad@gmail.com</p>
+          <p>adv@corporatesangbad.com</p>
+          <p>news@corporatesangbad.com</p>
+          <p>ফোনঃ +৮৮-০২২২-৩৩৫৪১২৫</p>
+        </div>
+        <div class="footer-column">
+          <ul>
+            <li>গোপনীয়তার নীতি</li>
+            <li>যোগাযোগ</li>
+            <li>আর্কাইভ</li>
+            <li>আমাদের সম্পর্কে</li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-credit">
+        <p>© ২০২৩ সর্বস্বত্ব সংরক্ষিত | কর্পোরেট সংবাদ</p>
+      </div>
+    </div>
   </body>
 </html>
