added go to top button

--- a/index.html
+++ b/index.html
@@ -464,5 +464,7 @@
         <p>© ২০২৩ সর্বস্বত্ব সংরক্ষিত | কর্পোরেট সংবাদ</p>
       </div>
     </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/go-to-top.svg"></button>
+    <script type="text/javascript" src="goto-top-script.js"></script>
   </body>
 </html>
